@@ -1,6 +1,7 @@
 === 2017-01-22
 * Enhancements
-  * populate_page_with now supports radio groups
+  * Populate_page_with now supports radio groups
+  * Added new page_url_value mehod that is created when you define page_url to return the value
 === 2017-01-20
 * Enhancements
   * Super called when factory method invoked with non Druid class
